--- a/train_cnn.ipynb
+++ b/train_cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,117 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A    0\n",
-       "Name: (/home/reindert/Valentin_REVO/surfperch_toshare/eval_texel Outputs/september 2024/surfperch/labeled_outputs/texel_baseline_20250331/Unknown/7539.240908180307part7___255.0.wav, 0.0, 5.0), dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_df.iloc[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 0:\n",
-      "Train index: [  0   1   2   3   6   7   8  10  11  12  13  14  18  19  21  22  23  24\n",
-      "  25  26  27  28  29  32  33  34  35  36  37  38  39  40  41  42  43  44\n",
-      "  45  46  47  48  49  51  52  54  55  56  57  58  60  61  62  63  64  67\n",
-      "  68  69  70  71  72  73  74  75  76  77  78  79  80  82  84  85  86  88\n",
-      "  89  90  91  93  94  95  96  97  98 101 102 103 104 105 108 110 111 112\n",
-      " 113 114 115 116 118 119]\n",
-      "Test index: [  4   5   9  15  16  17  20  30  31  50  53  59  65  66  81  83  87  92\n",
-      "  99 100 106 107 109 117]\n",
-      "size of each label in train set\n",
-      "A\n",
-      "0    12\n",
-      "1    12\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "\n",
-      "Fold 1:\n",
-      "Train index: [  0   1   2   3   4   5   6   7   8   9  11  12  14  15  16  17  18  19\n",
-      "  20  21  22  23  24  26  27  28  30  31  33  34  37  39  40  41  42  44\n",
-      "  45  46  47  48  49  50  51  53  54  55  57  58  59  61  62  63  64  65\n",
-      "  66  68  69  70  71  73  75  77  78  79  81  82  83  86  87  88  89  90\n",
-      "  91  92  94  97  98  99 100 101 102 103 104 105 106 107 109 111 112 113\n",
-      " 114 115 116 117 118 119]\n",
-      "Test index: [ 10  13  25  29  32  35  36  38  43  52  56  60  67  72  74  76  80  84\n",
-      "  85  93  95  96 108 110]\n",
-      "size of each label in train set\n",
-      "A\n",
-      "1    12\n",
-      "0    12\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "\n",
-      "Fold 2:\n",
-      "Train index: [  2   4   5   7   9  10  11  12  13  14  15  16  17  20  21  23  25  26\n",
-      "  27  28  29  30  31  32  33  34  35  36  38  39  41  42  43  44  47  48\n",
-      "  50  52  53  56  57  58  59  60  61  63  65  66  67  69  70  71  72  73\n",
-      "  74  75  76  77  78  79  80  81  83  84  85  86  87  88  90  92  93  94\n",
-      "  95  96  97  98  99 100 102 103 104 105 106 107 108 109 110 111 112 113\n",
-      " 114 115 116 117 118 119]\n",
-      "Test index: [  0   1   3   6   8  18  19  22  24  37  40  45  46  49  51  54  55  62\n",
-      "  64  68  82  89  91 101]\n",
-      "size of each label in train set\n",
-      "A\n",
-      "0    12\n",
-      "1    12\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "\n",
-      "Fold 3:\n",
-      "Train index: [  0   1   2   3   4   5   6   7   8   9  10  11  13  14  15  16  17  18\n",
-      "  19  20  22  23  24  25  27  28  29  30  31  32  33  35  36  37  38  39\n",
-      "  40  42  43  45  46  48  49  50  51  52  53  54  55  56  57  58  59  60\n",
-      "  61  62  63  64  65  66  67  68  69  72  74  75  76  77  80  81  82  83\n",
-      "  84  85  87  88  89  90  91  92  93  95  96  99 100 101 104 106 107 108\n",
-      " 109 110 111 112 117 118]\n",
-      "Test index: [ 12  21  26  34  41  44  47  70  71  73  78  79  86  94  97  98 102 103\n",
-      " 105 113 114 115 116 119]\n",
-      "size of each label in train set\n",
-      "A\n",
-      "0    12\n",
-      "1    12\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "\n",
-      "Fold 4:\n",
-      "Train index: [  0   1   3   4   5   6   8   9  10  12  13  15  16  17  18  19  20  21\n",
-      "  22  24  25  26  29  30  31  32  34  35  36  37  38  40  41  43  44  45\n",
-      "  46  47  49  50  51  52  53  54  55  56  59  60  62  64  65  66  67  68\n",
-      "  70  71  72  73  74  76  78  79  80  81  82  83  84  85  86  87  89  91\n",
-      "  92  93  94  95  96  97  98  99 100 101 102 103 105 106 107 108 109 110\n",
-      " 113 114 115 116 117 119]\n",
-      "Test index: [  2   7  11  14  23  27  28  33  39  42  48  57  58  61  63  69  75  77\n",
-      "  88  90 104 111 112 118]\n",
-      "size of each label in train set\n",
-      "A\n",
-      "0    12\n",
-      "1    12\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
@@ -232,17 +133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model.device is cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from opensoundscape import CNN\n",
     "# We use Resnet as most common architeture used in Bioacoustics (ref: Stowell 2022)\n",
@@ -576,6 +469,34 @@
     "print(\"F1 test: \", f1_test)\n",
     "print(\"AUC ROC test: \", auc_roc_test)\n",
     "print(\"AUC precision recall: \", auc_precision_recall_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.items()\n",
+    "avg_valid = {}\n",
+    "for key, value in zip(metrics.keys(), metrics.values()):\n",
+    "    avg_valid[key] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a pseudo dictionary of metrics for test\n",
+    "\n",
+    "metrics = {'Precision_valid': [0.5,0.2], 'Recall_valid': [0.5,0.2], 'F1_valid': [0.5,0.2]}\n",
+    "\n",
+    "avg_valid = {}\n",
+    "for key, value in zip(metrics.keys(), metrics.values()):\n",
+    "    # v is the list of grades for student k\n",
+    "    avg_valid[key] = sum(value)/ float(len(value))"
    ]
   },
   {
