Included PCEN preprocessor

--- a/train_cnn.ipynb
+++ b/train_cnn.ipynb
@@ -19,26 +19,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "\n",
-    "try:\n",
-    "    wandb.login()\n",
-    "    wandb_session = wandb.init(\n",
-    "        entity=\"revo2023\",  # replace with your entity/group name\n",
-    "        project=\"Agile Modeling and Opensoundscape\",\n",
-    "        name=\"Only\",\n",
-    "    )\n",
-    "except:  # if wandb.init fails, don't use wandb logging\n",
-    "    print(\"failed to create wandb session. wandb session will be None\")\n",
-    "    wandb_session = None"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,10 +34,10 @@
     "name_experiment = 'texel_baseline_20250331'\n",
     "train_set_dir = os.path.join('/home/reindert/Valentin_REVO/surfperch_toshare/eval_texel Outputs/september 2024/surfperch/labeled_outputs/', name_experiment)\n",
     "\n",
-    "pos_samples_file = os.listdir(os.path.join(train_set_dir, 'fishA')) \n",
+    "pos_samples_file = os.listdir(os.path.join(train_set_dir, 'downsweep')) \n",
     "neg_samples_file = os.listdir(os.path.join(train_set_dir, 'Unknown'))\n",
     "\n",
-    "pos_samples_file = [os.path.join(train_set_dir, 'fishA', file) for file in pos_samples_file]\n",
+    "pos_samples_file = [os.path.join(train_set_dir, 'downsweep', file) for file in pos_samples_file]\n",
     "neg_samples_file = [os.path.join(train_set_dir, 'Unknown', file) for file in neg_samples_file]\n",
     "\n",
     "df_pos = pd.DataFrame()\n",
@@ -67,17 +47,17 @@
     "df_pos['file'] = pos_samples_file\n",
     "df_pos['start_time'] = 0.0\n",
     "df_pos['end_time'] = 5.0\n",
-    "df_pos['A'] = 1\n",
+    "df_pos['downsweep'] = 1\n",
     "\n",
     "# Add negative sample file in the dataframe in a column file and create a column label with 0\n",
     "df_neg['file'] = neg_samples_file\n",
     "df_neg['start_time'] = 0.0\n",
     "df_neg['end_time'] = 5.0\n",
-    "df_neg['A'] = 0\n",
+    "df_neg['downsweep'] = 0\n",
     "\n",
     "# concatenate the two dataframe\n",
     "df_trainset = pd.concat([df_pos, df_neg], ignore_index=True)\n",
-    "df_trainset['A'].value_counts()\n",
+    "df_trainset['downsweep'].value_counts()\n",
     "\n",
     "# Save the df as csv in the current repo\n",
     "df_trainset.to_csv('train_set_baseline.csv', index=False)"
@@ -94,7 +74,10 @@
     "import sklearn.model_selection\n",
     "\n",
     "df_trainset = pd.read_csv('train_set_baseline.csv', index_col=[0,1,2])\n",
-    "train_df, valid_df = sklearn.model_selection.train_test_split(df_trainset, test_size=0.2, random_state=0, stratify=df_trainset['A'])"
+    "\n",
+    "# Add a class column called background which is not(downsweep)\n",
+    "# df_trainset['background'] = 1 - df_trainset['downsweep']\n",
+    "\n"
    ]
   },
   {
@@ -103,7 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.iloc[5]"
+    "train_df, valid_df = sklearn.model_selection.train_test_split(df_trainset, test_size=0.2, random_state=0, stratify=df_trainset['downsweep'])\n",
+    "\n",
+    "train_df"
    ]
   },
   {
@@ -117,7 +102,7 @@
     "# Create the 5-fold validation object\n",
     "seed = 0\n",
     "kf = StratifiedKFold(n_splits=5, shuffle=True, random_state=seed)\n",
-    "fish_sound ='A'\n",
+    "fish_sound ='downsweep'\n",
     "\n",
     "# Iterate over the folds\n",
     "for i, (train_index, test_index) in enumerate(kf.split(train_df, train_df[fish_sound])):\n",
@@ -142,27 +127,13 @@
     "# Resnet 18 because how dataset is small (avoid overfitting)\n",
     "\n",
     "architecture = 'resnet18' \n",
-    "class_list = ['A']\n",
+    "class_list = ['downsweep']\n",
     "model = CNN(architecture=architecture,\n",
     "            classes=class_list,\n",
     "            sample_duration=5.0,\n",
     "            overlay_df=None)\n",
     "\n",
     "print(f\"model.device is {model.device}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a log file for model\n",
-    "import logging\n",
-    "\n",
-    "log_file = 'model_training.log'\n",
-    "logging.basicConfig(filename=log_file, level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
-    "\n"
    ]
   },
   {
@@ -191,41 +162,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO - Try the different data augmentation and associated perf\n",
-    "\n",
-    "# Data augmentation available in the pipeline\n",
-    "model.preprocessor.pipeline.random_trim_audio.bypass = False\n",
-    "\n",
-    "# model.preprocessor.pipeline.overlay.bypass = True\n",
-    "# model.preprocessor.pipeline.overlay.overlay_df = (train_df.astype(int))\n",
-    "# model.preprocessor.pipeline.overlay.set(overlay_class='A')\n",
-    "\n",
-    "model.preprocessor.pipeline.time_mask.bypass = False\n",
-    "model.preprocessor.pipeline.time_mask.set(max_masks=2, max_width=0.1)\n",
-    "\n",
-    "model.preprocessor.pipeline.frequency_mask.bypass = False\n",
-    "model.preprocessor.pipeline.frequency_mask.set(max_masks=2, max_width=0.1)\n",
-    "\n",
-    "model.preprocessor.pipeline.add_noise.bypass = False\n",
-    "\n",
-    "model.preprocessor.pipeline.random_affine.bypass = True\n",
-    "\n",
-    "model.preprocessor.pipeline.bandpass.set(min_f=50, max_f=2000)\n",
-    "sample_rate = 32000\n",
-    "model.preprocessor.pipeline.to_spec.set(window_samples = 4 * (sample_rate // 100),\n",
-    "                                        # overlap_samples = None,\n",
-    "                                        # fft_size = None,\n",
-    "                                        # dB_scale = True,\n",
-    "                                        # scaling = 'spectrum'\n",
-    "                                        )"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,24 +186,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from librosa import pcen\n",
+    "model.preprocessor.pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from opensoundscape.preprocess.utils import show_tensor_grid\n",
     "from opensoundscape import AudioFileDataset\n",
+    "from  opensoundscape.preprocess.preprocessors import PCENPreprocessor\n",
+    "from opensoundscape import CNN, SpectrogramPreprocessor\n",
+    "from opensoundscape.preprocess.actions import Action\n",
+    "from opensoundscape.preprocess.action_functions import pcen\n",
+    "\n",
+    "sample_rate = 32000\n",
+    "\n",
+    "# Preprocessing\n",
+    "preprocessor = SpectrogramPreprocessor(5.0, overlay_df=train_df)\n",
+    "preprocessor.pipeline.load_audio.set(sample_rate=sample_rate)\n",
+    "preprocessor.pipeline.bandpass.set(min_f=50, max_f=2000)\n",
+    "preprocessor.pipeline.to_spec.set(window_samples = 4 * (sample_rate // 100),\n",
+    "                                        # overlap_samples = None,\n",
+    "                                        # fft_size = None,\n",
+    "                                        dB_scale = True,\n",
+    "                                        # scaling = 'spectrum'\n",
+    "                                        )\n",
+    "\n",
+    "# Augmentation\n",
+    "preprocessor.pipeline.random_trim_audio.bypass = True\n",
+    "preprocessor.pipeline.time_mask.bypass = True\n",
+    "preprocessor.pipeline.time_mask.set(max_masks=2, max_width=0.1)\n",
+    "preprocessor.pipeline.frequency_mask.bypass = True\n",
+    "preprocessor.pipeline.frequency_mask.set(max_masks=2, max_width=0.1)\n",
+    "preprocessor.pipeline.add_noise.bypass = True\n",
+    "preprocessor.pipeline.random_affine.bypass = True\n",
+    "\n",
+    "# model.preprocessor.pipeline.overlay.bypass = True\n",
+    "# preprocessor.pipeline.overlay.set(overlay_class='different', overlay_weight=0.5)\n",
+    "# preprocessor.insert_action(\n",
+    "#     action_index=\"PCEN\",  # give it a name\n",
+    "#     action=Action(pcen),  # the action object\n",
+    "#     after_key=\"bandpass\",  # where to put it (can also use before_key=...)\n",
+    "# )\n",
+    "# preprocessor.insert_action(\n",
+    "#     action_index=\"to_log\",  # give it a name\n",
+    "#     action=Action(amplitude_to_db),  # the action object\n",
+    "#     after_key=\"PCEN\",  # where to put it (can also use before_key=...)\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "model.preprocessor = preprocessor\n",
     "\n",
     "dataset = AudioFileDataset(train_df, model.preprocessor)\n",
+    "dataset.preprocessor.pipeline.overlay.bypass = True\n",
+    "# dataset.preprocessor.pipeline.overlay.set(overlay_class=train_df.sample(50))\n",
     "\n",
-    "dataset.preprocessor.pipeline.overlay.set(overlay_class=None)\n",
-    "\n",
-    "# Only select negative class from train set\n",
-    "# neg_train_df = train_df[train_df['A'] == 0]\n",
-    "# fish_sound = 'A'\n",
-    "# neg_train_df = train_df[train_df[fish_sound] == 0]\n",
-    "# neg_train_df[fish_sound] = 1\n",
-    "# dataset.preprocessor.pipeline.overlay.overlay_df = (neg_train_df.astype(int))\n",
-    "# dataset.preprocessor.pipeline.overlay.set(overlay_class=fish_sound)\n",
-    "\n",
-    "tensors = [dataset[i].data for i in range(9)]\n",
-    "sample_labels = [list(dataset[i].labels[dataset[i].labels > 0].index) for i in range(9)]\n",
+    "sample_idx = 15\n",
+    "tensors = [dataset[i].data for i in range(sample_idx, sample_idx + 9)]\n",
+    "sample_labels = [list(dataset[i].labels[dataset[i].labels > 0].index) for i in range(sample_idx, sample_idx + 9)]\n",
     "\n",
     "_ = show_tensor_grid(tensors, 3, labels=sample_labels)"
    ]
@@ -295,7 +283,6 @@
     "    epochs=5,\n",
     "    batch_size=8,\n",
     "    num_workers=16,\n",
-    "    wandb_session=wandb_session,\n",
     "    save_interval=5,  # save checkpoint every 10 epochs\n",
     "    save_path=checkpoint_folder,  # location to save checkpoints\n",
     "    progress_bar=False\n",
@@ -343,7 +330,7 @@
     "clip_duration = 5.0\n",
     "clip_overlap = 0\n",
     "min_label_overlap = 0.2\n",
-    "species_of_interest = ['A']\n",
+    "species_of_interest = [fish_sound]\n",
     "\n",
     "clip_labels = annotations.clip_labels(\n",
     "    clip_duration=clip_duration,\n",
@@ -352,6 +339,15 @@
     "    class_subset=species_of_interest)\n",
     "\n",
     "clip_labels.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotations"
    ]
   },
   {
@@ -497,16 +493,6 @@
     "for key, value in zip(metrics.keys(), metrics.values()):\n",
     "    # v is the list of grades for student k\n",
     "    avg_valid[key] = sum(value)/ float(len(value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Finish the session before next run\n",
-    "wandb.finish()"
    ]
   }
  ],
